# aqua-engine

./: .gitmodules  CMakeLists.txt  run.sh  todo.md
projects/test/src/: main.c
shaders/color/: color.frag
src/: aqua.c  aqua.h
src/gfx/: color.h  vertex.h
src/gfx/mesh/: mesh.c  mesh.h
src/gfx/shader/: shader.c  shader.h
src/gfx/window/: window.c  window.h
src/utils/: base-types.h
src/utils/file/: file.c  file.h
